[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/ButtonNoBG.tres" type="Theme" id=1]
[ext_resource path="res://fonts/BuildTabTheme.tres" type="Theme" id=2]
[ext_resource path="res://resources/HbarNoScroll.tres" type="Theme" id=3]
[ext_resource path="res://sprites/BG/buildPlan.png" type="Texture" id=4]
[ext_resource path="res://sprites/BG/IconRectBWTex.png" type="Texture" id=5]
[ext_resource path="res://nodes/components/BGCanvasRed.tscn" type="PackedScene" id=6]
[ext_resource path="res://nodes/components/ModuleBonus.tscn" type="PackedScene" id=7]
[ext_resource path="res://nodes/components/ReturnButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/Icons/64x64px/hammer.png" type="Texture" id=9]
[ext_resource path="res://scripts/animate/NodeAnimated.gd" type="Script" id=10]
[ext_resource path="res://scripts/ModuleDetailed.gd" type="Script" id=11]

[node name="ModuleDetailed" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )

[node name="BGCanvasRed" parent="." instance=ExtResource( 6 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -96.0
custom_constants/separation = 32

[node name="ModuleSelect" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 296.0
margin_bottom = 608.0
rect_min_size = Vector2( 296, 0 )

[node name="Preview" type="Control" parent="HBoxContainer/ModuleSelect"]
margin_right = 296.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 192 )
size_flags_horizontal = 3

[node name="BG" type="TextureRect" parent="HBoxContainer/ModuleSelect/Preview"]
self_modulate = Color( 0.607843, 0.607843, 0.607843, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_right = 128.0
margin_bottom = 192.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HBoxContainer/ModuleSelect/Preview/BG"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -68.0
margin_right = 64.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 128 )
stretch_mode = 4
script = ExtResource( 10 )

[node name="BuildButton" type="Button" parent="HBoxContainer/ModuleSelect/Preview/BG"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="HBoxContainer/ModuleSelect/Preview/BG/BuildButton"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -41.0
margin_right = 128.0
custom_colors/font_color = Color( 0.8, 0.8, 0.752941, 1 )
text = "Build"
align = 1

[node name="ProgressTimeTexture" type="TextureProgress" parent="HBoxContainer/ModuleSelect"]
unique_name_in_owner = true
margin_top = 196.0
margin_right = 296.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.854902, 0.545098, 0.054902, 1 )
nine_patch_stretch = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ModuleSelect/ProgressTimeTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0

[node name="ProgressSection" type="Label" parent="HBoxContainer/ModuleSelect/ProgressTimeTexture/VBoxContainer"]
unique_name_in_owner = true
margin_right = 296.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
align = 1

[node name="ProgressTime" type="Label" parent="HBoxContainer/ModuleSelect/ProgressTimeTexture/VBoxContainer"]
unique_name_in_owner = true
margin_top = 45.0
margin_right = 296.0
margin_bottom = 86.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
align = 1

[node name="Hammer" type="TextureRect" parent="HBoxContainer/ModuleSelect/ProgressTimeTexture"]
self_modulate = Color( 1, 1, 1, 0.376471 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 9 )

[node name="Hammer2" type="TextureRect" parent="HBoxContainer/ModuleSelect/ProgressTimeTexture"]
self_modulate = Color( 1, 1, 1, 0.376471 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -32.0
margin_right = -16.0
margin_bottom = 32.0
texture = ExtResource( 9 )

[node name="ToolButton" type="ToolButton" parent="HBoxContainer/ModuleSelect/ProgressTimeTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_left = 328.0
margin_right = 1248.0
margin_bottom = 608.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer"]
margin_right = 920.0
margin_bottom = 311.0
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="ModuleName" type="Label" parent="HBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 920.0
margin_bottom = 41.0
text = "Module"
align = 1

[node name="LabelBonuses" type="Label" parent="HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 920.0
margin_bottom = 86.0
text = "Bonuses"
align = 1

[node name="BonusList" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 90.0
margin_right = 920.0
margin_bottom = 176.0

[node name="ModuleBonus" parent="HBoxContainer/ScrollContainer/VBoxContainer/BonusList" instance=ExtResource( 7 )]
margin_right = 920.0

[node name="LabelCost" type="Label" parent="HBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 180.0
margin_right = 920.0
margin_bottom = 221.0
text = "Cost"
align = 1

[node name="CostsList" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 225.0
margin_right = 920.0
margin_bottom = 311.0

[node name="ModuleBonus" parent="HBoxContainer/ScrollContainer/VBoxContainer/CostsList" instance=ExtResource( 7 )]
margin_right = 920.0

[node name="Return" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="HBoxContainer/ModuleSelect/Preview/BG/BuildButton" to="." method="_on_Build_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/ModuleSelect/ProgressTimeTexture/ToolButton" to="." method="_on_Build_Button_pressed"]
[connection signal="pressed" from="Return/Button" to="." method="_on_Return_Button_pressed"]

[editable path="Return"]
